--- a/css/main.css
+++ b/css/main.css
@@ -199,7 +199,7 @@ INDEX TILE END
 **************************************************/
 
 .popular header {
-  height: 89px;
+  /* min-height: 89px; */
   display: flex;
   justify-content: space-between;
   background-color: #f9f5f0;
@@ -213,13 +213,15 @@ INDEX TILE END
   text-transform: uppercase;
   padding-left: 25px;
   padding-top: 31px;
+  padding-bottom: 28px;
   color: #32425c;
   font-weight: normal;
 }
 
 .popular .red-button {
-  width: 253px;
+  min-width: 253px;
   margin-right: 24px;
+  margin-left: 24px;
   margin-top: 25px;
 }
 
@@ -345,7 +347,7 @@ SERVICES START
 }
 
 .service-slides > div {
-  height: 333px;
+  min-height: 333px;
 }
 
 .services-interactive p {
@@ -681,6 +683,7 @@ CATALOG FILTERS START
 .range .active-line {
   width: 70%;
   height: 2px;
+  margin-left: 20px;
   background: #00ca74;
 }
 
@@ -698,11 +701,11 @@ CATALOG FILTERS START
 }
 
 .range .bullet.left {
-  left: 30px;
+  left: 20px;
 }
 
 .range .bullet.right {
-  left: 70px;
+  left: 160px;
 }
 
 .price-controls {
@@ -862,10 +865,11 @@ SORTER START
   /* width: 700px; */
   background-color: #f7f3ec;
   padding-top: 10px;
+  padding-bottom: 10px;
   display: flex;
   padding-left: 19px;
   padding-right: 17px;
-  height: 38px;
+  /* height: 38px; */
   justify-content: space-between;
 }
 
@@ -875,6 +879,7 @@ SORTER START
 
 .sorter ul {
   display: flex;
+  flex-wrap: wrap;
   padding: 0;
   list-style: none;
 }
@@ -956,7 +961,7 @@ OFFER START
 
 .offer {
   width: 220px;
-  height: 318px;
+  min-height: 318px;
   border: #eaeaea 1px solid;
   position: relative;
   margin-bottom: 20px;
@@ -1025,6 +1030,7 @@ OFFER START
   height: 38px;
 
   margin-left: 41px;
+  margin-bottom: 21px;
 
   position: relative;
 
